# cuFHE

./: .gitmodules  CMakeLists.txt  README.md
cufhe/: CMakeLists.txt  Makefile
cufhe/include/: bootstrap_gpu.cuh  cufhe.h  cufhe_gpu.cuh
cufhe/include/ntt_gpu/: ntt.cuh  ntt_1024_device.cuh
cufhe/lib/: CMakeLists.txt  bootstrap_gpu.cu  cufhe_gates_gpu.cu  cufhe_gpu.cu
cufhe/test/: CMakeLists.txt  test_api_gpu.cu  test_intensive.cc  test_tfhekey.cc
include/: bootstrap_gpu.cuh  cufhe.h  cufhe_gpu.cuh  cufheparams.hpp  gatebootstrapping_gpu.cuh  keyswitch_gpu.cuh
include/ntt_gpu/: ntt.cuh  ntt_1024_device.cuh  ntt_ffp.cuh  ntt_gpuntt.cuh  ntt_small_modulus.cuh  ntt_twiddle.cuh
src/: CMakeLists.txt  bootstrap_gpu.cu  cufhe_gates_gpu.cu  cufhe_gpu.cu  keyswitch_gpu.cu
src/ntt_gpu/: ntt_gpuntt.cu  ntt_small_modulus.cu  ntt_twiddle.cu
test/: CMakeLists.txt  test_cmux.cc  test_gate_gpu.cc  test_gate_gpu_multi.cc  test_intensive.cc  test_perf.cc  test_polynomial_mult_1024.cu  test_util.h
thirdparties/: CMakeLists.txt
